// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `<ArticleError />`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <Image
        aspectRatio={1}
        uri="https://image.io"
      />
      <Text>
        Some Short Headline
      </Text>
      <View>
        <ArticleFlags />
      </View>
      <View>
        <View>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "attributes": Object {},
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Rick Broadbent",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "inline",
                },
              ]
            }
          />
        </View>
        <View>
          <Text>
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;

exports[`4. an article with ads 1`] = `
<ArticleSkeleton>
  <View>
    <View>
      <Image
        aspectRatio={1}
        uri="https://image.io"
      />
      <Text>
        Some Headline
      </Text>
      <View>
        <ArticleFlags />
      </View>
      <View>
        <View>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "attributes": Object {},
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Rick Broadbent",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "inline",
                },
              ]
            }
          />
        </View>
        <View>
          <Text>
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
  </View>
</ArticleSkeleton>
`;
